url con carattere `+`

--- a/checkform5_TEST.html
+++ b/checkform5_TEST.html
@@ -32,7 +32,6 @@
 
 		<form role="form" id="form1" class="checkform" novalidate>
 
-
 			<div class="form-group">
 				<label class="control-label" for="required">Required</label>
 				<input required type="text" class="form-control" id="required" placeholder="Valore obbligatorio">
@@ -66,6 +65,11 @@
 			<div class="form-group">
 				<label class="control-label" for="email2">Email (multiple)</label>
 				<input type="email" class="form-control" id="email2" placeholder="Inserisci uno o più indirizzi email separati da virgola" multiple>
+			</div>
+
+			<div class="form-group">
+				<label class="control-label" for="url">Url</label>
+				<input type="url" class="form-control" id="url" value="http://ppppppp.com/+saaa">
 			</div>
 
 			<div class="form-group">
@@ -153,8 +157,6 @@
 					<input type="radio" name="radio" value="option3"> 3
 				</label>
 			</div>
-
-
 
 			<div class="form-group">
 				<label class="control-label" for="extra">Campo per controllo extra</label>
